--- a/admin_menus_toggle.html
+++ b/admin_menus_toggle.html
@@ -14,14 +14,15 @@ function toggleMenuItem(name, menu, hide, current) {
 			}
 		})
 		.fail(function(data) {
-            $('#pageErrors>span').html((data.content ? data.content : (data.responseJSON ? data.responseJSON.content  : '{lang.ERROR_TRY_AGAIN}')));
+            var tryAgainLang = '{lang.ERROR_TRY_AGAIN}';
+            <IGNORE>$('#pageErrors>span').html((data.content ? data.content : (data.responseJSON ? data.responseJSON.content  : tryAgainLang)));</IGNORE>
             $('#pageErrors').removeClass('d-none alert-info').addClass('alert-danger');
                 var itemRemoveClass = current == 1 ? 'cb-disable' : 'cb-enable';
                 var itemAddClass = current == 0 ? 'cb-disable' : 'cb-enable';
                 $('#' + menu + '_menu_'+name + ' .' + itemRemoveClass).addClass('selected');
                 $('#' + menu + '_menu_'+name + ' .' + itemAddClass).removeClass('selected');
         });
-        
+
         return false;
 }
 </script>
